--- a/Servidor HTTP/Mascotas/views/layout.ejs
+++ b/Servidor HTTP/Mascotas/views/layout.ejs
@@ -30,13 +30,14 @@
 
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/estilos.css">
-    <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
   </head>
-
+  
+  
   <body>
-    <%- body %>
-
+  <h1>Hola</h1>
+  <%- body %>
+      <h1>Adiós</h1>
 
 
     <!--
