--- a/Servidor HTTP/Mascotas/views/layout.ejs
+++ b/Servidor HTTP/Mascotas/views/layout.ejs
@@ -36,6 +36,14 @@
   
   <body>
   <h1>Hola</h1>
+  <ul>
+      <li><a href="/Quito">Quito</a>
+      </li>
+      <li>
+          <a href="/Guayaquil">Guayaquil</a>
+      </li>
+      
+  </ul>
   <%- body %>
       <h1>Adiós</h1>
 
