--- a/Informe/Proyecto/views/layout.ejs
+++ b/Informe/Proyecto/views/layout.ejs
@@ -29,7 +29,7 @@
     -->
 
     <!--STYLES-->
-    <link rel="stylesheet" href="/styles/importer.css">
+    <link rel="stylesheet" href="/styles/estilos.css">
     <!--STYLES END-->
   </head>
 
