--- a/Informe/Proyecto/views/layout.ejs
+++ b/Informe/Proyecto/views/layout.ejs
@@ -28,13 +28,25 @@
             + Use a different or additional preprocessor, like SASS, SCSS or Stylus
     -->
 
-    <!--STYLES-->
+   <!--STYLES-->
     <link rel="stylesheet" href="/styles/estilos.css">
     <!--STYLES END-->
   </head>
-
+  
+  
   <body>
-    <%- body %>
+  <h1>Hola</h1>
+  <ul>
+      <li><a href="/Quito">Quito</a>
+      </li>
+      <li>
+          <a href="/Guayaquil">Guayaquil</a>
+      </li>
+      
+  </ul>
+  <%- body %>
+      <h1>Adiós</h1>
+
 
 
 
