--- a/Mascotas/views/vistas/Usuario/crearUsuario.ejs
+++ b/Mascotas/views/vistas/Usuario/crearUsuario.ejs
@@ -15,6 +15,13 @@
         <label>Correo</label>
         <input type="email" class="form-control" placeholder="Ingrese su correo"  name="correo">
     </div>
+<!--
+    
+    <div class="form-group">
+        <label>Password</label>
+        <input type="password" class="form-control" placeholder="Ingrese su password"  name="password">
+    </div>
+-->
 
     <button type="submit" class="btn btn-success">Crear Usuario :)</button>
 </form>
