--- a/Mascotas/views/vistas/Usuario/editarUsuario.ejs
+++ b/Mascotas/views/vistas/Usuario/editarUsuario.ejs
@@ -20,6 +20,12 @@
                     <input type="email" class="form-control" placeholder="Ingrese su correo" name="correo" value="<%= usuarioAEditar.correo %>">
 
                     <input type="hidden" name="idUsuario" value="<%= usuarioAEditar.id %>">
+                    
+                </div>
+                
+                 <div class="form-group">
+                    <label>Password</label>
+                    <input type="password" class="form-control" placeholder="Ingrese su Password" name="password" >
                 </div>
 
                 <button type="submit" class="btn btn-block">Editar Usuario :)</button>
