--- a/AplicacionPrueba/src/app/app.component.html
+++ b/AplicacionPrueba/src/app/app.component.html
@@ -1,3 +1,11 @@
 <h1>
   {{title}}
 </h1>
+
+<p>
+  {{nombre}} - {{apellido}}
+</p>
+
+<h3 [innerHTML]="nombrecompleto()" (click)="hizoclic()" (mouseenter)="hizofocus()"
+    [style.backgroundColor]="colorH4" [style.fontSize]="tamanoh4"></h3>
+<input type="text" [placeholder]="nombrecompleto()">
