--- a/AplicacionPrueba/src/app/app.component.html
+++ b/AplicacionPrueba/src/app/app.component.html
@@ -2,10 +2,27 @@
   {{title}}
 </h1>
 
-<p>
-  {{nombre}} - {{apellido}}
-</p>
+<!--<p>-->
+  <!--{{nombre}} - {{apellido}}-->
+<!--</p>-->
 
-<h3 [innerHTML]="nombrecompleto()" (click)="hizoclic()" (mouseenter)="hizofocus()"
-    [style.backgroundColor]="colorH4" [style.fontSize]="tamanoh4"></h3>
-<input type="text" [placeholder]="nombrecompleto()">
+<!--<h3 [innerHTML]="nombrecompleto()" (click)="hizoclic()" (mouseenter)="hizofocus()"-->
+    <!--[style.backgroundColor]="colorH4" [style.fontSize]="tamanoh4"></h3>-->
+<!--<input type="text" [placeholder]="nombrecompleto()">-->
+
+<div class ="container">
+  <form (ngSubmit)="crearTienda(NuevaTiendaForm)" #NuevaTiendaForm="ngForm">
+    <div class="form-group">
+      <label>Stop Name</label>
+      <input type="text" class="form-control" placeholder="Digite un nombre de tienda como: Adidas"
+             name="nombre"
+             [(ngModel)]="nuevaTienda.nombre">
+
+    </div>
+
+    <button type="submit" class="btn btn-block animatedColors btn-success">Crear</button>
+
+  </form>
+
+
+</div>
