--- a/AplicacionPrueba/src/app/app.component.html
+++ b/AplicacionPrueba/src/app/app.component.html
@@ -1,28 +1,15 @@
-<h1>
-  {{title}}
-</h1>
-
-<!--<p>-->
-  <!--{{nombre}} - {{apellido}}-->
-<!--</p>-->
-
-<!--<h3 [innerHTML]="nombrecompleto()" (click)="hizoclic()" (mouseenter)="hizofocus()"-->
-    <!--[style.backgroundColor]="colorH4" [style.fontSize]="tamanoh4"></h3>-->
-<!--<input type="text" [placeholder]="nombrecompleto()">-->
-
-<div class ="container">
+<h1>{{title}}</h1>
+<div class="container">
   <form (ngSubmit)="crearTienda(NuevaTiendaForm)" #NuevaTiendaForm="ngForm">
     <div class="form-group">
-      <label>Stop Name</label>
-      <input type="text" class="form-control" placeholder="Digite un nombre de tienda como: Adidas"
+      <label>Tienda</label>
+      <input type="text"
+             class="form-control"
+             placeholder="Digite un nombre de tienda como: Adidas"
              name="nombre"
              [(ngModel)]="nuevaTienda.nombre">
-
     </div>
-
-    <button type="submit" class="btn btn-block animatedColors btn-success">Crear</button>
-
+    <button type="submit" class="btn btn-block btn-success">Crear</button>
   </form>
-
 
 </div>
