--- a/AplicacionPrueba/src/app/app.component.html
+++ b/AplicacionPrueba/src/app/app.component.html
@@ -3,26 +3,35 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
-      <pre>
+      <pre class="animated fadeInUp">
         {{nuevaTienda|json }}
       </pre>
 
 
     </div>
     <div class="col-sm-6">
-      <form (ngSubmit)="crearTienda(NuevaTiendaForm)"
+      <form class="animated bounceIn" (ngSubmit)="crearTienda(NuevaTiendaForm)"
             #NuevaTiendaForm="ngForm">
         <div class="form-group">
+
           <label>Tienda</label>
+          <div class ="animated slideInUp" [hidden]="!nombre.errors">
+            <span style="font-size:40px" class="bg-primary animated slideInUp"
+                  *ngIf="nombre.errors && (nombre.dirty || nombre.touched)"> Ingrese un nombre con un mínimo de 4 caracteres</span>
+          </div>
           <input required
                  minlength="4" type="text"
                  class="form-control"
                  placeholder="Digite un nombre de tienda como: Adidas"
                  name="nombre"
                  [(ngModel)]="nuevaTienda.nombre"
-                 >
+                 #nombre="ngModel"
+                 #nombreElm
+          >
         </div>
-        <button [disabled]="!NuevaTiendaForm.valid" type="submit" class="btn btn-block btn-success">Crear</button>
+        <button [disabled]="disabledButtons.NuevaTiendaFormSubmitButton || !NuevaTiendaForm.valid" type="submit"
+                class="btn btn-block btn-success">Crear
+        </button>
       </form>
 
 
@@ -31,7 +40,16 @@
       <h1>{{nuevaTienda.nombre}}</h1>
 
     </div>
-  </div>
 
+  </div>
+<div class="row">
+ 
+  <div class="col-sm-3" *ngFor="let tiendita of tiendasss">
+    <h3>{{tiendita.nombre}}</h3>
+    <p>{{tiendita.id}}</p>
+
+
+  </div>
+</div>
 
 </div>
