--- a/AplicacionPrueba/src/app/app.component.html
+++ b/AplicacionPrueba/src/app/app.component.html
@@ -10,7 +10,7 @@
     </a>
   </li>
   <li>
-    <a [routerLink]="['/producto','2']">
+    <a [routerLink]="['/tienda','2','producto']">
       Producto
     </a>
   </li>
