--- a/AplicacionPrueba/src/app/producto/producto.component.html
+++ b/AplicacionPrueba/src/app/producto/producto.component.html
@@ -1,3 +1,23 @@
-<p>
-  producto works!
-</p>
+<h1>Productos</h1>
+
+<div class="container">
+  <div class="form-group">
+    <label>Nombre de producto</label>
+  <input
+
+         type="text"
+         class = "form-control"
+         name="nombre"
+         [(ngModel)]="nuevoProducto.nombre">
+
+  <button class="btn btn-block btn-success"(click)="crearProducto(nuevoProducto.nombre)">Crear Producto</button>
+
+    <div class="row">
+      <div class ="col-sm-6" *ngFor=" let producto of productos">
+        <h1>{{producto.nombre}}</h1>
+        <p>ID: {{producto.id}}</p>
+
+      </div>
+
+  </div>
+</div>
