Corección Eliminar Usuario

--- a/Mascotas/views/vistas/editarUsuario.ejs
+++ b/Mascotas/views/vistas/editarUsuario.ejs
@@ -1,26 +1,24 @@
 <div style='background-color:white;color:black;'>
 
   <h1>Edita el Usuario</h1>
-  <p>¡Edita el Usuario !</p>
   <div class="row">
     <div class="col-sm-8">
       <form action="Usuario/EditarUsuarioForm" method="post">
         <div class="form-group">
-          <label for="exampleInputEmail1">Nombres</label>
-          <input minlength=5 required type="text" class="form-control"  placeholder="Nombres" name="nombres">
+          <label>Nombres</label>
+          <input minlength=5 required type="text" class="form-control"  placeholder="Nombres" name="nombres"  value="<%= usuario.nombres %>">
         </div>
         <div class="form-group">
-          <label for="exampleInputEmail1">Apellidos</label>
-          <input minlength=5 required type="text" class="form-control"  placeholder="Apellidos" name="apellidos">
+          <label>Apellidos</label>
+          <input minlength=4 required type="text" class="form-control"  placeholder="Apellidos" name="apellidos" value="<%= usuario.apellidos %>">
         </div>
         <div class="form-group">
-          <label for="exampleInputEmail1">Correo</label>
-          <input type="email" class="form-control"  placeholder="Correo" name="correo">
+          <label>Correo</label>
+          <input type="email" class="form-control"  placeholder="Correo" name="correo" value="<%= usuario.correo %>">
         </div>
         <input type="hidden" name="id" value="<%=usuario.id%>">
         <button type="submit" class="btn btn-success">Editar Usuario</button>
         <br>
-
       </form>
     </div>
     <div class="col-sm-4">
