--- a/Mascotas/views/error.ejs
+++ b/Mascotas/views/error.ejs
@@ -1,5 +1,10 @@
+
 <div class="jumbotron">
-  <h1>Error¿</h1>
-  <p> <%=typeof error.descripcion == 'undefined' ? 'Error desconocido' : error.descripcion%></p>
-  <p><a class="btn btn-danger btn-lg" href="<%=typeof error.url == 'undefined' ? 'Inicio' : error.url%>" role="button">Volver</a></p>
+  <h1> Error </h1>
+  <p> <%= error.descripcion %></p>
+  <h3>Detalles</h3>
+  <pre>
+      <%= error.rawError %>
+  </pre>
+  <p><a class="btn btn-danger btn-lg" href="<%= error.url %>" role="button">Volver</a></p>
 </div>
