--- a/Mascotas/views/vistas/crearUsuario.ejs
+++ b/Mascotas/views/vistas/crearUsuario.ejs
@@ -1,23 +1,21 @@
 <div style='background-color:white;color:black;'>
 
   <h1>Crea Usuarios</h1>
-  <p>¡Registrate tu o tus amigos en la aplicación!</p>
 
   <form action="Usuario/CrearUsuarioForm" method="post">
     <div class="form-group">
-      <label for="exampleInputEmail1">Nombres</label>
-      <input minlength=5 required type="text" class="form-control"  placeholder="Nombres" name="nombres">
+      <label>Nombres</label>
+      <input minlength=4 required type="text" class="form-control"  placeholder="Nombres" name="nombres">
     </div>
     <div class="form-group">
-      <label for="exampleInputEmail1">Apellidos</label>
-      <input minlength=5 required type="text" class="form-control"  placeholder="Apellidos" name="apellidos">
+      <label>Apellidos</label>
+      <input minlength=4 required type="text" class="form-control"  placeholder="Apellidos" name="apellidos">
     </div>
     <div class="form-group">
-      <label for="exampleInputEmail1">Correo</label>
+      <label>Correo</label>
       <input type="email" class="form-control"  placeholder="Correo" name="correo">
     </div>
     <button type="submit" class="btn btn-success">Crear Usuario</button>
     <br>
-
   </form>
 </div>
