--- a/Mascotas/views/vistas/Mascota/crearMascota.ejs
+++ b/Mascotas/views/vistas/Mascota/crearMascota.ejs
@@ -1,7 +1,7 @@
 <div style='background-color:white;color:black;'>
 
   <h1>Crea Mascotas</h1>
-  <p>¡Registra a tus mascotas!</p>
+  <p>Registra a tus mascotas</p>
 
   <form action="mascota/crearMascota" method="post">
     <div class="form-group">
@@ -10,8 +10,8 @@
     </div>
 
     <div class="form-group">
-      <label>Fecha Nacimiento</label>
-      <input type="date" class="form-control" placeholder="Fecha Nacimiento" name="fechaNacimiento">
+      <label>Fecha de Nacimiento</label>
+      <input type="date" class="form-control" placeholder="Fecha de Nacimiento" name="fechaNacimiento">
     </div>
 
     <label for="">Raza</label>
@@ -25,10 +25,10 @@
     </select>
 
     <br>
-    <label for="">Pais Nacimiento</label>
+    <label for="">País  de Nacimiento</label>
     <select class="form-control" name="paisNacimiento">
       <option value='Ecuador'>Ecuador</option>
-      <option value='Peru'>Peru</option>
+      <option value='Perú'>Perú</option>
       <option value='Colombia'>Colombia</option>
     </select>
     <br>
