--- a/Mascotas/views/vistas/Mascota/editarMascota.ejs
+++ b/Mascotas/views/vistas/Mascota/editarMascota.ejs
@@ -1,47 +1,32 @@
 <div style='background-color:white;color:black;'>
 
   <h1>Editar Mascotas</h1>
-  <p>¡Edita a tu mascotas!</p>
 
   <div class="row">
     <div class="col-sm-8">
       <form action="mascota/editarMascota" method="post">
         <div class="form-group">
           <label>Nombre</label>
-          <input required type="text" class="form-control" placeholder="Nombre" name="nombre">
+          <input required type="text" class="form-control" placeholder="Nombre" name="nombre" value="<%= mascota.nombre %>">
         </div>
 
         <div class="form-group">
           <label>Fecha Nacimiento</label>
-          <input type="date" class="form-control" placeholder="Fecha Nacimiento" name="fechaNacimiento">
+          <input type="text" disabled class="form-control" placeholder="Fecha Nacimiento" name="fechaNacimiento" value="<%= mascota.fechaNacimiento.toLocaleString()%>">
         </div>
 
-        <label for="">Raza</label>
-
-        <select class="form-control" name="idRaza">
-          <% for(var i=0; i<razas.length; i++){ %>
-            <option value='<%=razas[i].id%>'>
-              <%=razas[i].nombre%>
-            </option>
-            <%  } %>
-        </select>
-
-        <br>
-        <label for="">Pais Nacimiento</label>
-        <select class="form-control" name="paisNacimiento">
-          <option value='Ecuador'>Ecuador</option>
-          <option value='Peru'>Peru</option>
-          <option value='Colombia'>Colombia</option>
-        </select>
-        <br>
+        <div class="form-group">
+          <label>País de Nacimiento</label>
+          <input type="text" disabled class="form-control"  name="paisNacimiento" value="<%= mascota.paisNacimiento %>">
+        </div>
         <input type="hidden" name="id" value="<%=mascota.id%>">
-        <button type="submit" class="btn btn-success">Crear Mascota</button>
+        <button type="submit" class="btn btn-success">Editar Mascota</button>
 
       </form>
     </div>
     <div class="col-sm-4">
       <h3 class="text-center"> ID: <%=mascota.id%> -  <%=mascota.nombre%></h3>
-      <h4 class="text-center"> Dia: <%=mascota.fechaNacimiento.getDay()%> Mes: <%=mascota.fechaNacimiento.getMonth()%> Año: <%=mascota.fechaNacimiento.getFullYear()%></h4>
+      <h4 class="text-center"> Fecha de Nacimiento: <%=mascota.fechaNacimiento.toLocaleString()%></h4>
       <p class="text-center">
         <%= mascota.paisNacimiento %>
       </p>
