--- a/Mascotas/views/vistas/Mascota/listarMascotas.ejs
+++ b/Mascotas/views/vistas/Mascota/listarMascotas.ejs
@@ -1,14 +1,18 @@
 <div class="row">
 
   <% for(var i=0; i<mascotas.length; i++){ %>
-  <% mascotas[i].fechaNacimiento.setUTCDate(15) %>
+
   <div class="col-sm-4">
     <h3 class="text-center"> ID: <%=mascotas[i].id%> -  <%=mascotas[i].nombre%></h3>
-    <h4 class="text-center"> Dia: <%=mascotas[i].fechaNacimiento.getDay()%> Mes: <%=mascotas[i].fechaNacimiento.getMonth()%> Año: <%=mascotas[i].fechaNacimiento.getFullYear()%></h4>
+    <h4 class="text-center"> Fecha de Nacimiento: <%=mascotas[i].fechaNacimiento.toLocaleString()%></h4>
+
     <p class="text-center">
       <%= mascotas[i].paisNacimiento %>
     </p>
-    <a style="color:white" href="/Mascota/destroy/<%=mascotas[i].id%>">
+    <p class="text-center">
+      <%= mascotas[i].idRaza.nombre %>
+    </p>
+    <a style="color:white" href="/Mascota/BorrarMascota?id=<%=mascotas[i].id%>">
       <button class="btn btn-block btn-danger"> Borrar</button>
     </a>
     <br>
