--- a/Mascotas/views/vistas/Raza/listarRazas.ejs
+++ b/Mascotas/views/vistas/Raza/listarRazas.ejs
@@ -2,8 +2,8 @@
 
   <% for(var i=0; i<razas.length; i++){ %>
   <div class="col-sm-4">
-    <h3 class="text-center"> ID: <%=razas[i].id%> -  <%=razas[i].nombre%></h3>
-    <a style="color:white" href="/Raza/destroy/<%=razas[i].id%>">
+    <h3 class="text-center"> <%=razas[i].nombre%></h3>
+    <a style="color:white" href="/Raza/BorrarRaza?id=<%=razas[i].id%>">
       <button class="btn btn-block btn-danger"> Borrar</button>
     </a>
   </div>
