--- a/Mascotas/views/vistas/Raza/crearRaza.ejs
+++ b/Mascotas/views/vistas/Raza/crearRaza.ejs
@@ -7,6 +7,11 @@
       <label>Nombre</label>
       <input required type="text" class="form-control"  placeholder="Nombre" name="nombre">
     </div>
+    <div class="form-group">
+      <label>Peso promedio (en libras)</label>
+      <input required type="number" min="3" class="form-control"  placeholder="Peso promedio" name="peso">
+    </div>
+
 
     <button type="submit" class="btn btn-success">Crear Raza</button>
     <br>
