Arreglo de interfaz

--- a/Mascotas/views/vistas/Mascota/listarMascotas.ejs
+++ b/Mascotas/views/vistas/Mascota/listarMascotas.ejs
@@ -3,7 +3,7 @@
   <% for(var i=0; i<mascotas.length; i++){ %>
 
   <div class="col-sm-4">
-    <h3 class="text-center"> ID: <%=mascotas[i].id%> -  <%=mascotas[i].nombre%></h3>
+    <h3 class="text-center"> <%=mascotas[i].nombre%></h3>
     <h4 class="text-center"> Fecha de Nacimiento: <%=mascotas[i].fechaNacimiento.toLocaleString()%></h4>
 
     <p class="text-center">
