--- a/Mascotas/views/vistas/Raza/editarRaza.ejs
+++ b/Mascotas/views/vistas/Raza/editarRaza.ejs
@@ -11,7 +11,7 @@
         </div>
 
         <div class="form-group">
-          <label>Peso promedio (en libras)</label>
+          <label>Peso (en libras)</label>
           <input type="text" class="form-control" placeholder="Peso" name="peso" value="<%= raza.peso%>">
         </div>
 
@@ -22,7 +22,8 @@
     </div>
     <div class="col-sm-4">
       <h3 class="text-center"> <%=raza.nombre%></h3>
-      <h4 class="text-center"> Peso: <%=raza.peso%> libras</h4>
+      <h4 class="text-center"> Peso: <%=raza.peso%>libras</h4>
+
     </div>
   </div>
 
